@@ -1,5 +1,10 @@
 2005-08-01  Mark McLoughlin  <markmc@redhat.com>
 
+	* lib/sources/paneldelegate.py: add some more debug
+	spew.
+
+2005-08-01  Mark McLoughlin  <markmc@redhat.com>
+
 	Allow ignoring changes to specific GConf keys.
 	Bug #310514
 
